force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Interaction_Type__c</fullName>
    <inlineHelpText>The Call or Case type, e.g. Inbound/Outbound/Case</inlineHelpText>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
            </value>
            <value>
                <fullName>Automated Outbound Call</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Internal Call</fullName>
            </value>
            <value>
                <fullName>Phone Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>