force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Last_State__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Last_State__c</fullName>
    <formula>IF ( TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Outbound Call&apos; || TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Internal Call&apos; || TEXT(NVMStatsSF__Interaction_Type__c) == &apos;Phone Callback&apos;, TEXT(NVMStatsSF__Interaction_Type__c),
IF (!NVMStatsSF__EndRecorded__c, &apos;Not Ended&apos;,
IF (NVMStatsSF__Queued_Callback__c , &apos;Call Back Set&apos;,
IF(NVMStatsSF__Call_Diverted__c || BEGINS(NVMStatsSF__EndApplet__c ,&apos;CCR&apos;) || CONTAINS (NVMStatsSF__Agent_List__c,&apos;CCRConnect&apos;), &apos;CCR Handled&apos;,
IF (NVMStatsSF__Last_Queue_Result__c==&apos;HangUp&apos;, &apos;Queue Abandoned&apos;,
IF(NVMStatsSF__Agent_Talk_Time__c &gt; 0, &apos;Agent Handled&apos;, 
IF (ISBLANK(NVMStatsSF__Queue_Name__c) &amp;&amp; !NVMStatsSF__MessageTaken__c, &apos;Automation Abandoned&apos;,
IF (ISBLANK(NVMStatsSF__Queue_Name__c) &amp;&amp; NVMStatsSF__MessageTaken__c, &apos;Message Taken (A)&apos;,
IF (!ISBLANK(NVMStatsSF__Queue_Name__c) &amp;&amp; NVMStatsSF__MessageTaken__c &amp;&amp; !NVMStatsSF__Connected__c &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0, &apos;Message Taken (Q)&apos;,
IF (!ISBLANK(NVMStatsSF__Queue_Name__c) &amp;&amp; !NVMStatsSF__Connected__c &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0, IF(ISBLANK(NVMStatsSF__Last_Queue_Result__c)||NVMStatsSF__Last_Queue_Result__c==&apos;HangUp&apos;,&apos;Queue Abandoned&apos;,NVMStatsSF__Last_Queue_Result__c),
IF(NVMStatsSF__Connected__c &amp;&amp; NVMStatsSF__Agent_Talk_Time__c == 0, &apos;Hang Up On Connect&apos;, &apos;Unknown&apos;)
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the final state logged during this Call</inlineHelpText>
    <label>Last State</label>
    <type>Text</type>
</CustomField>