force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Monitored__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Monitored__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the call was monitored</inlineHelpText>
    <label>Monitored</label>
    <type>Checkbox</type>
</CustomField>