force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__MOS__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__MOS__c</fullName>
    <inlineHelpText>Mean Opinion Score for a Call in the range 1.0 (Bad) to 5.0 (Excellent)</inlineHelpText>
    <label>MOS</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>