force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__NextTime__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NextTime__c</fullName>
    <inlineHelpText>Field not used</inlineHelpText>
    <label>NextTime</label>
    <type>DateTime</type>
</CustomField>