force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__NVM_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NVM_Service_Name__c</fullName>
    <inlineHelpText>The service/line name that was called</inlineHelpText>
    <label>Service Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>