force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Queued_Callback__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queued_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calls where an NVM Queued Callback was requested, queueing or calling back.  These calls all share the same Conversation GUID</inlineHelpText>
    <label>Queued Callback</label>
    <type>Checkbox</type>
</CustomField>