force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Related_Account__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Account this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>