force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Lead this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>