force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Opportunity this call relates to (as indicated by a Task record whose CallObject matches the GUID from this summary)</inlineHelpText>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>