force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Sentiment__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Sentiment__c</fullName>
    <inlineHelpText>Sentiment Analysis summary and the sentiment scores sampled at regular intervals</inlineHelpText>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>