force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Short_Abandon__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Short_Abandon__c</fullName>
    <formula>(NVMStatsSF__Abandoned__c = true) &amp;&amp; (NVMStatsSF__Total_Call_Duration__c &lt; 10)  &amp;&amp;  (NVMStatsSF__Agent_Talk_Time__c == 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calls abandoned within 10s where Agent Talk Time is zero</inlineHelpText>
    <label>Short Abandon</label>
    <type>Checkbox</type>
</CustomField>