force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Silence_Percent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Silence_Percent__c</fullName>
    <inlineHelpText>Percentage of recording where there was silence</inlineHelpText>
    <label>Silence Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>