force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__StartRecorded__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__StartRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if a Start Event was seen - this zero-duration event fixes the inbound Call/Case Start Time</inlineHelpText>
    <label>StartRecorded</label>
    <type>Checkbox</type>
</CustomField>