force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Trace__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Trace__c</fullName>
    <inlineHelpText>Reserved for diagnostics</inlineHelpText>
    <label>Trace</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>