force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Offered_Call__c.field-meta.xml
<CustomField>
    <fullName>Offered_Call__c</fullName>
    <formula>IF(ISBLANK(NVMStatsSF__Queue_Name__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offered Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>