force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Opening__c.field-meta.xml
<CustomField>
    <fullName>Opening__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Opening</label>
    <type>Checkbox</type>
</CustomField>