force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Opening_Opening__c.field-meta.xml
<CustomField>
    <fullName>Opening_Opening__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opening_Opening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>