force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Patient_Education__c.field-meta.xml
<CustomField>
    <fullName>Patient_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Patient Education</label>
    <type>Checkbox</type>
</CustomField>