force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Patient_Education_Meds__c.field-meta.xml
<CustomField>
    <fullName>Patient_Education_Meds__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Patient Education Meds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>