force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Patient_Status_DXE__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status_DXE__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Patient Status (DXE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>