force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Phone_Skills__c.field-meta.xml
<CustomField>
    <fullName>Phone_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conversation Analyzer Category</description>
    <label>Phone Skills</label>
    <type>Checkbox</type>
</CustomField>