force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Phone_Skills_Politeness__c.field-meta.xml
<CustomField>
    <fullName>Phone_Skills_Politeness__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phone Skills Politeness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>