force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Practice_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Practice_of_Contact__c</fullName>
    <formula>NVMStatsSF__Related_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice_of_Contact</label>
    <type>Text</type>
</CustomField>