force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Queue_Duration_in_20__c.field-meta.xml
<CustomField>
    <fullName>Queue_Duration_in_20__c</fullName>
    <formula>IF( (NVMStatsSF__Queue_Duration__c +   NVMStatsSF__Agent_Ring_Duration__c  )  &gt;= 21, 0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Duration in 20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>