force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Queue_UCD_Spanish__c.field-meta.xml
<CustomField>
    <fullName>Queue_UCD_Spanish__c</fullName>
    <formula>IF (CONTAINS (NVMStatsSF__Queue_List__c,&quot;UCD Spanish-&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue UCD Spanish</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>