force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Reason_for_Not_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Not_Scheduling__c</fullName>
    <label>Reason for Not Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COVID</fullName>
            </value>
            <value>
                <fullName>Date of first available appointment is too far out</fullName>
            </value>
            <value>
                <fullName>Need to arrange transportation</fullName>
            </value>
            <value>
                <fullName>Need to talk to spouse/patient</fullName>
            </value>
            <value>
                <fullName>Practice doesn&apos;t take caller&apos;s insurance</fullName>
            </value>
            <value>
                <fullName>Price shopping</fullName>
            </value>
            <value>
                <fullName>Saving up money/waiting for tax return</fullName>
            </value>
            <value>
                <fullName>Service not offered</fullName>
            </value>
            <value>
                <fullName>Service too expensive</fullName>
            </value>
            <value>
                <fullName>Other [please add note]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>