force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Related_Contact_Has_Email__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Has_Email__c</fullName>
    <formula>NOT(ISBLANK(NVMStatsSF__Related_Contact__r.Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Contact Has Email</label>
    <type>Checkbox</type>
</CustomField>