force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Resolved_On_First_Call__c.field-meta.xml
<CustomField>
    <fullName>Resolved_On_First_Call__c</fullName>
    <formula>IF (Calls_Last_48_Hrs__c == 1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved on First Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>