force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Routed_Back_to_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Routed_Back_to_Call_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routed Back to Call Center</label>
    <type>Checkbox</type>
</CustomField>