force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Routed_to_Practice__c.field-meta.xml
<CustomField>
    <fullName>Routed_to_Practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routed to Practice</label>
    <type>Checkbox</type>
</CustomField>