force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Routed_to_Practice_Id__c.field-meta.xml
<CustomField>
    <fullName>Routed_to_Practice_Id__c</fullName>
    <label>Routed to Practice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>