force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Routed_to_Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Routed_to_Practice_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the practice to which the call was routed</description>
    <inlineHelpText>The name of the practice to which the call was routed</inlineHelpText>
    <label>Routed to Practice Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>