force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <formula>IF( NVMStatsSF__CallDisposition__c == &quot;Scheduled&quot; ||
NVMStatsSF__CallDisposition__c == &quot;OB - Scheduled&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>