force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Service_Name_MarketingType__c.field-meta.xml
<CustomField>
    <fullName>Service_Name_MarketingType__c</fullName>
    <formula>IF (CONTAINS(NVMStatsSF__NVM_Service_Name__c,&quot;West St Paul&quot;),MID(NVMStatsSF__NVM_Service_Name__c,FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)+1),100),
IF (CONTAINS(NVMStatsSF__NVM_Service_Name__c,&quot;HattiesburgMS ACI Internet&quot;),MID(NVMStatsSF__NVM_Service_Name__c,FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)))),100),
IF (LEN(MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)
    )) = 3 , MID(NVMStatsSF__NVM_Service_Name__c,FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1),100), IF (LEN(MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)
    )) = 3 , MID(NVMStatsSF__NVM_Service_Name__c,FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1),100), 
    
    IF (LEN(
        MID(NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1),
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1))
    ) = 3 , MID(NVMStatsSF__NVM_Service_Name__c,FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)+1),100), NVMStatsSF__NVM_Service_Name__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name Marketing Type</label>
    <type>Text</type>
</CustomField>