force-app/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/Service_Name_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Name_State__c</fullName>
    <formula>IF (CONTAINS(NVMStatsSF__NVM_Service_Name__c,&quot;West St Paul&quot;),&quot;MN&quot;,
IF (CONTAINS(NVMStatsSF__NVM_Service_Name__c,&quot;HattiesburgMS&quot;),&quot;MS&quot;,
IF (CONTAINS(NVMStatsSF__NVM_Service_Name__c,&quot;Outbound Call&quot;),&quot;Outbound Call&quot;,
IF (LEN(MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)
    )) = 3 , MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)
    ), IF (LEN(MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)
    )) = 3 , MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)
)  , 
    
    IF (LEN(
        MID(NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1),
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
        FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1))
    ) = 3 , MID(
    NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1),
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)+1) - FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c,
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c, 
    FIND(&quot; &quot;, NVMStatsSF__NVM_Service_Name__c)+1)+1)
), &quot;National&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Name State</label>
    <type>Text</type>
</CustomField>